Adding Users to system menu, small heading changes.

--- a/modules/configuration/client/views/configuration.html
+++ b/modules/configuration/client/views/configuration.html
@@ -1,13 +1,9 @@
-<h1 class="page-title">
-	<a href ui-sref='projects' class='pull-right return-link'>Return to Project List</a>
-	Project Template Provisioning
+<section id="configuration-view" class="row">
 
-</h1>
-
-<section id="project-view" class="row">
-
-	<div class='col-sm-12'>
-
+	<div class='col-sm-10'>
+		<h1 class="page-title">
+			Project Template Provisioning
+		</h1>
 		<div class="panel panel-default">
 			<div class='panel-body'>
 
@@ -58,6 +54,8 @@
 		</div> <!-- /panel -->
 
 	</div> <!-- /col12 -->
-
+	<div class='col-sm-2'>
+		<tmpl-system-menu x-menu-context="configuration"></tmpl-system-menu>
+	</div>
 
 </section>
