--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -125,7 +125,7 @@
 		<hr>
 		<label class="control-label">User</label>
 		<ul class="list-unstyled">
-			<li><a href ui-sref="settings.profile">Profile</a></li>
+			<li><a href ui-sref="settings.profile">My Profile</a></li>
 			<li><a href="/api/auth/signout" target="_self">Logout</a></li>
 	  	</ul>
 	</div>	
