--- a/modules/users/client/views/admin/list-users.client.view.html
+++ b/modules/users/client/views/admin/list-users.client.view.html
@@ -1,9 +1,9 @@
 <section class="row">
   <div class='col-sm-10'>
+    <h1 class="page-title">
+      Users
+    </h1>  
     <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Users</h3>
-      </div>
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-3">
