Remove IE lower scroll bar.

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -727,6 +727,7 @@ pre {
 	white-space: pre-wrap !important;
 	word-wrap: normal !important;
 	word-break: normal !important;
+	overflow-x:hidden;
 }
 
 .scrolling-fixed-box {
