--- a/modules/users/client/views/admin/edit-user.client.view.html
+++ b/modules/users/client/views/admin/edit-user.client.view.html
@@ -1,6 +1,11 @@
 
 <section class="row">
   <div class='col-sm-10'>
+
+    <h1 class="page-title">
+      Admin
+    </h1>
+    
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">Edit User: {{user.username}}</h3>
