--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -257,10 +257,9 @@ ul.list-indent-left {
 
 .list-documents li {
   border-top: 1px solid $border-grey;
-  padding: 2px 0;
+  padding: 3px 5px;
   position: relative;
 }
-
 .list-documents li.active,
 .list-documents li.active a {
   color: #ffffff;
@@ -273,9 +272,17 @@ ul.list-indent-left {
 .list-documents li.active .glyphicon-play {
   position:absolute;
   right: 8px;
-  top: 3px;
+  top: 4px;
 }
-
+.list-icon-left li {
+  position: relative;
+  padding-left: 21px;
+}
+.list-icon-left li a span {
+  position: absolute;
+  left: 5px;
+  top: 5px;
+}
 h3.firstHeading {
   margin-top: 5px;
 }
