--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -14,7 +14,7 @@
 			</div>
 			<div class='col-sm-4 col-no-padding vertical-scroll col-border-right'>
 			
-				<ul class="small list-unstyled list-documents list-indent-left">
+				<ul class="small list-unstyled list-documents list-indent-left list-icon-left">
 
 					<li><a href><span class="glyphicon glyphicon-file"></span> Cover and Citation</a></li>
 					<li><a href><span class="glyphicon glyphicon-file"></span> Table of Contents</a></li>
