--- a/modules/activities/client/views/activity.html
+++ b/modules/activities/client/views/activity.html
@@ -1,12 +1,30 @@
 <section id="activity-view" class="row">
 
 	<div class='col-sm-10'>
-		<h1 class="page-title">
+		<h2 class="page-title">
 			{{ actBase.project.name }}
+		</h2>
+		<h1 class="page-title">
+			{{ actBase.activity.name }}
 		</h1>
 
-		<section class="panel panel-default">
-		here
+		<section class="row">
+			<section class="col-sm-2">
+
+				<ul class="list-unstyled no-lower-margin">
+					<li ng-repeat="task in actBase.activity.tasks">
+						<div class="pull-right" ng-if="task.complete"><span class="glyphicon glyphicon-ok-circle text-success"></span></div>
+						<div class="pull-right" ng-if="!task.complete"><span class="glyphicon glyphicon-remove-circle text-danger"></span></div>
+						{{ task.name }}
+					</li>
+					<li ng-if="actBase.activity.tasks.length === 0">No tasks identified.</li>
+				</ul>
+
+			</section>
+			<section class="col-sm-10">
+				{{ actBase.activity.processCode }}
+				<tmpl-load-activity-process x-project="actBase.project" x-activity="actBase.activity"></tmpl-load-activity-process>
+			</section>
 		</section>
 		
 	</div> <!-- /col9 -->
