--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -6,45 +6,22 @@
 		<div class='row'>
 			<div class='col-sm-4 col-no-padding vertical-scroll col-border-right'>
 				
-				<ul class="small list-unstyled list-documents">
-					<li class='active bg-primary clickable'><span class="glyphicon glyphicon-play"></span>Application Main Report</li>
-					<li><a href target="_new">Application Appendicies</a></li>					
+				<ul ng-repeat="type in docBrowser.docTypes" class="small list-unstyled list-documents">
+					<li class='active bg-primary clickable'><span class="glyphicon glyphicon-play"></span>{{ type.projectFolderType }}</li>
+					<ul ng-repeat="stypeObj in type.projectFolderSubTypeObjects" class="small list-unstyled list-documents">
+						<li><a href target="_new">==={{ stypeObj.projectFolderSubType }}===</a></li>
+						<ul ng-repeat="folderNameObj in stypeObj.projectFolderNames" class="small list-unstyled list-documents">
+							<li><a href target="_new">{{ folderNameObj }}</a></li>
+						</ul>
+					</ul>
 				</ul>
 
 			</div>
 			<div class='col-sm-4 col-no-padding vertical-scroll col-border-right'>
 			
-				<ul class="small list-unstyled list-documents list-indent-left list-icon-left">
+				<ul ng-repeat="doc in docBrowser.documentFiles" class="small list-unstyled list-documents list-indent-left">
 
-					<li><a href><span class="glyphicon glyphicon-file"></span> Cover and Citation</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Table of Contents</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Preface</a></li>
-					<li class='active bg-primary clickable'><a href><span class="glyphicon glyphicon-file"></span> Executive Summary</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Resume (En Francais)</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Acknowledgements</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Table of Concordance</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Table of Contents</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Acronyms Abbreviations</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Glossary</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch01_Purpose of Application Environmental Impact Statement</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch02_Project Overview</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch03_Detailed Project Description</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch04_Assessment Process</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch05_Effects Assessment Methodology</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch06_Assessment of Potential Environmental Effects - Part 1</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch06_Assessment of Potential Environmental Effects - Part 2</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch07_Assessment of Potential Economic Effects</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch08_Assessment of Potential Social Effects</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch09_Assessment of Potential Heritage Effects</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch10_Assessment of Potential Health Effects</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch11_Summary of Proposed Environmental and Operational Management Plans</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch12_Background and Aboriginal Groups Settings</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch13_Aboriginal Interests Rights and Title</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch14_Other Potential Effects on Aboriginal Interests</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch15_Procedural Aspects of Aboriginal Consultation</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch16_Summary Aboriginal Interests</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch17_Federal Environmental Assessment Requirements</a></li>
-					<li><a href><span class="glyphicon glyphicon-file"></span> Ch18_Summary and Conclusions</a></li>
+					<li><a href><span class="glyphicon glyphicon-file"></span>{{ doc.projectFolderName }} </a></li>
 				</ul>
 
 			</div>
