--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -255,7 +255,8 @@ ul.list-indent-left {
   border-right: 1px solid $border-grey;
 }
 
-.list-documents li {
+.list-documents li,
+.list-tasks li {
   border-top: 1px solid $border-grey;
   padding: 3px 5px;
   position: relative;
@@ -265,7 +266,8 @@ ul.list-indent-left {
   color: #ffffff;
 }
 
-.list-documents li:first-child {
+.list-documents li:first-child,
+.list-tasks li:first-child {
   border-top: none
 }
 
@@ -274,6 +276,16 @@ ul.list-indent-left {
   right: 8px;
   top: 4px;
 }
+.list-icon-right li {
+  position: relative;
+  padding-right: 21px;
+}
+.list-icon-right li > span {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+
 .list-icon-left li {
   position: relative;
   padding-left: 21px;
@@ -281,7 +293,7 @@ ul.list-indent-left {
 .list-icon-left li a span {
   position: absolute;
   left: 5px;
-  top: 5px;
+  top: 6px;
 }
 h3.firstHeading {
   margin-top: 5px;
@@ -421,7 +433,7 @@ th .progress-bar {
 
 .block-content {
    margin-bottom: 15px;
-   border-bottom: 1px solid $border-grey;
+   border-bottom: 2px solid $border-grey;
 }
 .panel > .block-content:first-child > h3 {
   margin-top: 0px;
@@ -441,6 +453,11 @@ th .progress-bar {
 .panel-tombstone-menu hr {
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+#menu-side hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .panel-body .panel-toggle {
